Retrofit and Login

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -187,6 +187,7 @@
         app:layout_constraintVertical_bias="0.023" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="411dp"
         android:layout_height="361dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -194,8 +195,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        >
+        app:layout_constraintVertical_bias="1.0">
 
         <TextView
             android:id="@+id/judulMenuMakanan"
@@ -213,15 +213,15 @@
             android:id="@+id/recyclerViewMenuKeranjang"
             android:layout_width="376dp"
             android:layout_height="248dp"
-            android:padding="15dp"
             android:clipToPadding="false"
+            android:padding="15dp"
             android:scrollbars="vertical"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:spanCount="2"
             />
 
         <ImageButton
